--- a/src/Pages/Auth/ForgetPassword/ForgetPassword.css
+++ b/src/Pages/Auth/ForgetPassword/ForgetPassword.css
@@ -4,12 +4,40 @@
     align-items: center;
     height: 100vh;
     background: linear-gradient(to bottom, #7896c6, #245a94);
-
-
 }
-
 .formForgetPass {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 10px;
+}
+
+@media (max-width: 768px){
+    .forgetPassForm {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background: linear-gradient(to bottom, #7896c6, #245a94);
+    }
+    .formForgetPass {
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 20px;
+        border-radius: 10px;
+    }
+}
+
+@media (max-width: 480px){
+    .forgetPassForm {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background: linear-gradient(to bottom, #7896c6, #245a94);
+    }
+    .formForgetPass {
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 20px;
+        border-radius: 10px;
+    }
+
 }
