--- a/src/Components/EditTask/EditTask.css
+++ b/src/Components/EditTask/EditTask.css
@@ -3,3 +3,21 @@
     width: 100%;
     border-radius: 10px;
 }
+
+@media (max-width: 768px){
+    .give-Edittask-container{
+        margin: 0;
+        width: 100%;
+        border-radius: 10px;
+    }
+
+}
+
+@media (max-width: 480px){
+    .give-Edittask-container{
+        margin: 0;
+        width: 100%;
+        border-radius: 10px;
+    }
+
+}
