--- a/src/Pages/Auth/SignupPage/SignupPagestyles.css
+++ b/src/Pages/Auth/SignupPage/SignupPagestyles.css
@@ -22,3 +22,59 @@
 .LabelFields{
   width: 280px;
 }
+
+@media (max-width: 768px){
+  .signUpContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    width: 100vw; /* Change to 100vw to cover the entire viewport width */
+    height: 100vh;
+    margin: 0;
+  }
+  
+  .signupContainer-2 {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  .backgroundSignup {
+    background: linear-gradient(to bottom, #7896c6, #245a94);
+    height: 100vh;
+  }
+  
+  .LabelFields{
+    width: 280px;
+  }
+
+}
+
+@media (max-width: 480px){
+  .signUpContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    width: 100vw; /* Change to 100vw to cover the entire viewport width */
+    height: 100vh;
+    margin: 0;
+  }
+  
+  .signupContainer-2 {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  .backgroundSignup {
+    background: linear-gradient(to bottom, #7896c6, #245a94);
+    height: 100vh;
+  }
+  
+  .LabelFields{
+    width: 280px;
+  }
+
+}
