--- a/src/Pages/Admin/GiveTask/GiveTask.css
+++ b/src/Pages/Admin/GiveTask/GiveTask.css
@@ -4,6 +4,7 @@
     align-items: center;
     height: 100vh;
     background: linear-gradient(to bottom, #7896c6, #245a94); 
+    margin-left: 60px;
     
 }
 
@@ -23,6 +24,7 @@
         align-items: center;
         height: 100vh;
         background: linear-gradient(to bottom, #7896c6, #245a94); 
+        margin-left: 60px;
         
     }
     
@@ -43,6 +45,7 @@
         align-items: center;
         height: 100vh;
         background: linear-gradient(to bottom, #7896c6, #245a94); 
+        margin-left: 60px;
         
     }
     
