--- a/src/Pages/Admin/AdminHomePage/AdminHomePage.css
+++ b/src/Pages/Admin/AdminHomePage/AdminHomePage.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    margin-left: 60px;
 }
 
 .admin-home-background{
@@ -67,6 +68,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        margin-left: 60px;
     }
     
     .admin-home-background{
@@ -134,6 +136,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        margin-left: 60px;
     }
     
     .admin-home-background{
