--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,12 @@ body{
  
 }
 
+.App{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom, #7896c6, #245a94); 
+  height: 100vh;
+}
+
 
