--- a/src/Pages/AdminHomePage/AdminHomePage.css
+++ b/src/Pages/AdminHomePage/AdminHomePage.css
@@ -1,9 +1,8 @@
 .admin-home-background {
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    height: 100vh;
     margin-left: 170px;
+    margin-top: -10%;
   }
   
   .information-container {
