--- a/src/Pages/User/HomePage/styles.css
+++ b/src/Pages/User/HomePage/styles.css
@@ -89,10 +89,84 @@ td:nth-child(5) {
 
 @media (max-width: 768px) {
   .Page-css {
-    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: linear-gradient(to bottom, #7896c6, #245a94);
+    margin-left: 60px;
   }
-
+  
   .task-list {
-    width: 100%;
+    width: 80%;
+    width: 1000px;
+    background-color: rgba(255, 255, 255, 0.5);
+    color: black;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
   }
+  
+  .task-list h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  .list-container {
+    overflow-x: auto;
+  }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+  }
+  
+  th,
+  td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  th {
+    background-color: inherit;
+  }
+  
+  td {
+    word-wrap: break-word;
+    max-width: 200px;
+  }
+  
+  tr:hover {
+    background-color: lightblue;
+  }
+  
+  td:first-child {
+    font-weight: bold;
+  }
+  
+  td:nth-child(1){
+    width: 180px;
+  }
+  
+  td:nth-child(2){
+    width: 80px;
+  }
+  
+  td:nth-child(3){
+    width: 200px;
+  }
+  
+  td:nth-child(4),
+  td:nth-child(5) {
+    width: 100px;
+  }
+  
+  .btn-homepage{
+    display: flex;
+  }
+  
 }
