--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body{
   align-items: center;
   background: linear-gradient(to bottom, #7896c6, #245a94); 
   min-height: 100vh;
-  min-width: 1200px;
+  min-width: 100vb;
 
 }
 
