--- a/src/Pages/Admin/ViewAllTask/ViewAllTask.css
+++ b/src/Pages/Admin/ViewAllTask/ViewAllTask.css
@@ -2,7 +2,7 @@
   background-image: linear-gradient(to bottom, #7896c6, #245a94);
   overflow: hidden;
   min-height: 100vh;
-  margin-left: 60px;
+  margin-left: 70px;
 }
 
 .task-container {
@@ -19,17 +19,22 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
   z-index: 1;
+  overflow-y: auto; 
+  max-height: 80vh; 
 }
 
+.taskTabel{
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 15px;
+}
 
 .taskTabel th,
 .taskTabel td {
   padding: 8px;
-  /* Reduced padding */
   text-align: left;
   border-bottom: 1px solid #ddd;
-  font-size: 14px;
-  /* Reduced font size */
+  font-size: 15px;
 }
 
 .taskTabel th {
@@ -42,13 +47,11 @@
 }
 
 .taskTabel tr {
-  height: 40px;
-  /* Reduced row height */
+  height: 40px;  
 }
 
 .taskTabel tr:hover {
-  background-color: inherit;
-  /* Remove hover effect if desired */
+  background-color: lightblue;
 }
 
 .taskTabel td button {
@@ -65,204 +68,101 @@
 
 }
 
+.taskTabel td:nth-child(1){
+  width: 120px;
+}
+
+.taskTabel td:nth-child(2){
+  width: 110px;
+}
+
+.taskTabel td:nth-child(3){
+  width: 150px;
+}
+
+.taskTabel td:nth-child(4),
+td:nth-child(5) ,td:nth-child(6) {
+  width: 100px;
+}
+
+.taskTabel td:nth-child(7){
+  width: 110px;
+}
+
 .taskTabel td button:hover {
   color: red;
 }
 
-@media (max-width: 768px) {
-  .admin-background {
-    background-image: linear-gradient(to bottom, #7896c6, #245a94);
-    overflow: hidden;
-    min-height: 100vh;
-    margin-left: 60px;
-  }
+::-webkit-scrollbar {
+  width: 10px;
+}
 
-  .task-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+::-webkit-scrollbar-thumb {
+  background-color:  #7896c6;
+  border-radius: 6px;
+}
 
-  .user-container {
-    padding: 20px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.5);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    position: relative;
-    z-index: 1;
-  }
+::-webkit-scrollbar-thumb:hover {
+  background-color:  #245a94;
+}
 
-  .user-container h3 {
-    text-align: center;
-    color: #333;
-  }
-
-  .user-container ul {
-    list-style-type: none;
-    padding: 0;
-  }
-
-  .list {
-    padding: 15px;
-    border-radius: 5px;
-  }
-
-  .list b {
-    color: #555;
-  }
-
-  .task-info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .task-info span {
-    color: #555;
-  }
-
-  .task-info .completed {
-    color: green;
-  }
-
-  .task-info .not-completed {
-    color: red;
-  }
-
-  .taskTabel {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 15px;
-  }
-
-  .taskTabel th,
-  td {
-    padding: 12px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-
-  .taskTabel th {
-    background-color: inherit;
-  }
-
-  .taskTabel td {
-    word-wrap: break-word;
-    max-width: 200px;
-  }
-
-  .taskTabel tr:hover {
-    background-color: lightblue;
-  }
+::-webkit-scrollbar-track {
+  background-color:  #245a94;
+}
 
 
-  .taskTabel td button {
-    position: absolute;
+/* Open */ 
 
-  }
+.admin-background-open{
+  background-image: linear-gradient(to bottom, #7896c6, #245a94);
+  overflow: hidden;
+  min-height: 100vh;
+  margin-left: 60px;
+  margin-left: 210px;
+}
 
-  .taskTabel td button:hover {
-    color: red;
-  }
+.taskTabelOpen{
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.taskTabelOpen tr:hover {
+  background-color: lightblue;
 
 }
 
-@media (max-width: 480px) {
-  .admin-background {
-    background-image: linear-gradient(to bottom, #7896c6, #245a94);
-    overflow: hidden;
-    min-height: 100vh;
-    margin-left: 60px;
-  }
-
-  .task-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-
-  .user-container {
-    padding: 20px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.5);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    position: relative;
-    z-index: 1;
-  }
-
-  .user-container h3 {
-    text-align: center;
-    color: #333;
-  }
-
-  .user-container ul {
-    list-style-type: none;
-    padding: 0;
-  }
-
-  .list {
-    padding: 15px;
-    border-radius: 5px;
-  }
-
-  .list b {
-    color: #555;
-  }
-
-  .task-info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .task-info span {
-    color: #555;
-  }
-
-  .task-info .completed {
-    color: green;
-  }
-
-  .task-info .not-completed {
-    color: red;
-  }
-
-  .taskTabel {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 15px;
-  }
-
-  .taskTabel th,
-  td {
-    padding: 12px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-
-  .taskTabel th {
-    background-color: inherit;
-  }
-
-  .taskTabel td {
-    word-wrap: break-word;
-    max-width: 200px;
-  }
-
-  .taskTabel tr:hover {
-    background-color: lightblue;
-  }
+.taskTabelOpen tr {
+  height: 30px;  
+}
 
 
-  .taskTabel td button {
-    position: absolute;
-
-  }
-
-  .taskTabel td button:hover {
-    color: red;
-  }
+.taskTabelOpen th,
+.taskTabelOpen td {
+  padding: 6px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  font-size: 14px;
 
 }
+
+.taskTabelOpen td:nth-child(1){
+  width: 90px;
+}
+
+.taskTabelOpen td:nth-child(2){
+  width: 90px;
+}
+
+.taskTabelOpen td:nth-child(3){
+  width: 130px;
+}
+
+.taskTabelOpen td:nth-child(4),
+td:nth-child(5) td:nth-child(6) {
+  width: 60px;
+}
+
+.taskTabelOpen td:nth-child(7){
+  width: 110px;
+}
+
