--- a/src/Pages/User/HomePage/styles.css
+++ b/src/Pages/User/HomePage/styles.css
@@ -35,49 +35,49 @@ body {
   overflow-x: auto;
 }
 
-table {
+.home-table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 15px;
 }
 
-th,
+.home-table th,
 td {
   padding: 12px;
   text-align: left;
   border-bottom: 1px solid #ddd;
 }
 
-th {
+.home-table th {
   background-color: inherit;
 }
 
-td {
+.home-table td {
   word-wrap: break-word;
   max-width: 200px;
 }
 
-tr:hover {
+.home-table tr:hover {
   background-color: lightblue;
 }
 
-td:first-child {
+.home-table td:first-child {
   font-weight: bold;
 }
 
-td:nth-child(1){
+.home-table td:nth-child(1){
   width: 180px;
 }
 
-td:nth-child(2){
+.home-table td:nth-child(2){
   width: 80px;
 }
 
-td:nth-child(3){
+.home-table td:nth-child(3){
   width: 200px;
 }
 
-td:nth-child(4),
+.home-table td:nth-child(4),
 td:nth-child(5) {
   width: 100px;
 }
