--- a/src/Pages/Admin/ViewAllTask/ViewAllTask.css
+++ b/src/Pages/Admin/ViewAllTask/ViewAllTask.css
@@ -117,8 +117,7 @@ td:nth-child(5) ,td:nth-child(6) {
   background-image: linear-gradient(to bottom, #7896c6, #245a94);
   overflow: hidden;
   min-height: 100vh;
-  margin-left: 60px;
-  margin-left: 210px;
+  margin-left: 230px;
 }
 
 .taskTabelOpen{
@@ -135,6 +134,9 @@ td:nth-child(5) ,td:nth-child(6) {
   height: 30px;  
 }
 
+.taskTabelOpen td button:hover {
+  color: red;
+}
 
 .taskTabelOpen th,
 .taskTabelOpen td {
