--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,15 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  background-size: cover;
-  background-position: center;
   color: black;
-}
-
-.App{
+  background: linear-gradient(to bottom, #7896c6, #245a94); 
+  height: 100vh;
+  /* width: 100vb; */
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, #7896c6, #245a94); 
-  min-height: 100vh;
-  min-width: 100vb;
-
 }
+
+
 
 
