--- a/src/Pages/Auth/SignupPage/SignupPagestyles.css
+++ b/src/Pages/Auth/SignupPage/SignupPagestyles.css
@@ -3,8 +3,8 @@
   justify-content: center;
   align-items: center;
   color: black;
-  width: 100vw; /* Change to 100vw to cover the entire viewport width */
-  height: 100vh;
+  width: 100%; 
+  height: 100%;
   margin: 0;
 }
 
@@ -23,58 +23,9 @@
   width: 280px;
 }
 
-@media (max-width: 768px){
+@media screen and (max-width : 550px) {
   .signUpContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    width: 100vw; /* Change to 100vw to cover the entire viewport width */
-    height: 100vh;
-    margin: 0;
+    width:  100%;
+    height: 100%;
   }
-  
-  .signupContainer-2 {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .backgroundSignup {
-    background: linear-gradient(to bottom, #7896c6, #245a94);
-    height: 100vh;
-  }
-  
-  .LabelFields{
-    width: 280px;
-  }
-
-}
-
-@media (max-width: 480px){
-  .signUpContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    width: 100vw; /* Change to 100vw to cover the entire viewport width */
-    height: 100vh;
-    margin: 0;
-  }
-  
-  .signupContainer-2 {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .backgroundSignup {
-    background: linear-gradient(to bottom, #7896c6, #245a94);
-    height: 100vh;
-  }
-  
-  .LabelFields{
-    width: 280px;
-  }
-
 }
