--- a/src/Pages/User/HomePage/styles.css
+++ b/src/Pages/User/HomePage/styles.css
@@ -1,17 +1,11 @@
 /* styles.css */
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
 .Page-css {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: linear-gradient(to bottom, #7896c6, #245a94);
+  /* background: linear-gradient(to bottom, #7896c6, #245a94); */
   margin-left: 60px;
 }
 
